# achille

./: .gitignore  LICENSE  README.md  achille.cabal  achille.nix  cabal.project  release.nix  site.cabal
.github/workflows/: haskell.yml
achille/: Achille.hs
achille-pandoc/: README.md  achille-pandoc.cabal
achille-pandoc/Achille/: Pandoc.hs
achille-pandoc/Achille/Pandoc/: Recipe.hs
achille-stache/: LICENSE  README.md  achille-stache.cabal
achille-stache/Achille/: Stache.hs
achille-stache/Achille/Stache/: Recipe.hs
achille-yaml/: LICENSE  achille-yaml.cabal
achille-yaml/Achille/: Yaml.hs
achille/Achille/: CLI.hs  Cache.hs  Config.hs  Context.hs  Diffable.hs  Dot.hs  DynDeps.hs  IO.hs  Internal.hs  Path.hs  Prelude.hs  Recipe.hs  Result.hs  Run.hs  Syntax.hs  Task.hs  Writable.hs
achille/Achille/Core/: Program.hs  Recipe.hs  Task.hs
achille/Achille/Recipe/: Base.hs  List.hs  Match.hs
achille/Achille/Syntax/: Core.hs
achille/Achille/Task/: Cached.hs  Prim.hs
docs/: Main.hs  deploy.sh  docs.cabal  graph.sh
docs/content/: about.md  docs.md  examples.md  index.md  menu.yml  releases.md
docs/content/assets/: theme.css
docs/content/docs/: blog.md  getting-started.md  gist.md  tasks.md  why.md
docs/content/templates/: footer.mustache  header.mustache  page.mustache
example/: Main.hs  README.md  example.cabal
example/content/posts/: first.md  second.md
example/content/templates/: footer.mustache  header.mustache  index.html  index.mustache  post.html  post.mustache
src/: Achille.hs  Cache.hs  Config.hs  Item.hs  Main.hs  Recipe.hs  Task.hs  Templates.hs  Thumbnail.hs  Timestamped.hs  Writable.hs
src/Achille/: Config.hs  Internal.hs  Recipe.hs  Run.hs  Task.hs  Thumbnail.hs  Timestamped.hs  Writable.hs
src/Achille/Internal/: IO.hs
src/Achille/Recipe/: Frontmatter.hs  Pandoc.hs
src/Achille/Task/: Cached.hs  Pandoc.hs
tests/: FakeIO.hs  Main.hs
tests/Test/Achille/: Branching.hs  Caching.hs  Common.hs  FakeIO.hs  Glob.hs  Match.hs  Misc.hs  ReadWrite.hs  Recovery.hs
