cabal-version:      3.8
name:               achille
version:            0.1.0
synopsis:           A library for building incremental static site generators
category:           Web
description:
  achille is a library for building incremental static site generators.
  For more information, see here: <https://acatalepsie.fr/projects/achille>.

bug-reports:        https://github.com/flupe/achille/issues
homepage:           https://acatalepsie.fr/projects/achille
author:             Lucas Escot <lucas@escot.me>
maintainer:         Lucas Escot <lucas@escot.me>
license:            MIT
license-file:       LICENSE
build-type:         Simple
tested-with:        GHC == 9.4.4

source-repository head
  type:             git
  location:         git://github.com/flupe/achille.git

library
  default-language: GHC2021
  hs-source-dirs: achille
  ghc-options: -Wextra
  default-extensions: BlockArguments
                    , ImportQualifiedPost
                    , LambdaCase
                    , QuantifiedConstraints
                    , RecordWildCards
                    , TypeFamilies
                    , ViewPatterns
  exposed-modules: Achille
                 , Achille.CLI
                 , Achille.Cache
                 , Achille.Config
                 , Achille.Context
                 , Achille.Diffable
                 , Achille.DynDeps
                 , Achille.IO
                 , Achille.Path
                 , Achille.Prelude
                 , Achille.Recipe
                 , Achille.Task
                 , Achille.Task.Prim
                 , Achille.Writable
  other-modules: Achille.Core.Recipe
               , Achille.Core.Program
               , Achille.Core.Task
               , Achille.Dot
  build-depends: base                 >= 4.16   && < 4.18
               , binary               >= 0.8.9  && < 0.9
               , binary-instances     >= 1.0.3  && < 1.1
               , bytestring           >= 0.11.3 && < 0.12
               , constraints          >= 0.13.4 && < 0.14
               , containers           >= 0.6.5  && < 0.7
               , directory            >= 1.3.6  && < 1.4
               , filepath             >= 1.4.2  && < 1.5
               , Glob                 >= 0.10.2 && < 0.11
               , mtl                  >= 2.2     && < 2.3
               , optparse-applicative >= 0.17.0 && < 0.18
               , process              >= 1.6.13 && < 1.7
               , text                 >= 2.0    && < 2.1
               , time                 >= 1.11.1 && < 1.12
               , transformers         >= 0.5.6  && < 0.7

test-suite test
  default-language: GHC2021
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules: Test.Achille.Common
               , Test.Achille.FakeIO
               , Test.Achille.Match
               , Test.Achille.ReadWrite
               , Test.Achille.Recovery
  build-depends: base                 >= 4.16    && < 4.18
               , binary               >= 0.8.9   && < 0.9
               , binary-instances     >= 1.0.3   && < 1.1
               , bytestring           >= 0.11.3  && < 0.12
               , constraints          >= 0.13.4  && < 0.14
               , containers           >= 0.6.5   && < 0.7
               , directory            >= 1.3.6   && < 1.4
               , filepath             >= 1.4.2   && < 1.5
               , Glob                 >= 0.10.2  && < 0.11
               , mtl                  >= 2.2     && < 2.3
               , optparse-applicative >= 0.17.0  && < 0.18
               , process              >= 1.6.13  && < 1.7
               , tasty                >= 1.4.3   && < 1.5
               , tasty-hunit          >= 0.10    && < 0.11
               , tasty-test-reporter  >= 0.1.1.4 && < 0.2
               , text                 >= 2.0     && < 2.1
               , time                 >= 1.11.1  && < 1.12
               , achille              >= 0.1    && < 0.2
