name:               site
version:            0.0.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:    Templates
                  , Config
                  , Writable
                  , Recipe
  build-depends:    base == 4.*
                  , optparse-applicative
                  , pandoc
                  , pandoc-types
                  , containers
                  , text
                  , filepath
                  , Glob
                  , binary
                  , bytestring
                  , directory
                  , blaze-html
                  , process
                  , JuicyPixels
                  , JuicyPixels-extra
  ghc-options:      -threaded
  default-language: Haskell2010
