cabal-version:      3.0
name:               achille-pandoc
version:            0.0.0
synopsis:           Bindings for processing markup files with Pandoc using achille
category:           Web
description:        Bindings for processing markup files with Pandoc using achille.

bug-reports:        https://github.com/flupe/achille/issues
homepage:           https://acatalepsie.fr/projects/achille
author:             Lucas Escot <lucas@escot.me>
maintainer:         Lucas Escot <lucas@escot.me>
license:            MIT
license-file:       LICENSE
build-type:         Simple
tested-with:
  , GHC == 9.2.4
  , GHC == 9.4.2

source-repository head
  type:             git
  location:         git://github.com/flupe/achille.git
  subdir:           achille-pandoc

library
  default-language:  Haskell2010
  hs-source-dirs:    .
  default-extensions: BlockArguments
                    , DeriveAnyClass
                    , DeriveGeneric
                    , ImportQualifiedPost
                    , InstanceSigs
                    , LambdaCase
                    , ScopedTypeVariables
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators
  exposed-modules: Achille.Pandoc
  other-modules:   Achille.Pandoc.Recipe
  build-depends: base                 >= 4.16   && < 4.18
               , achille              >= 0.1    && < 0.2
               , aeson                >= 2.1    && < 2.2
               , bytestring           >= 0.11.3 && < 0.12
               , filepath             >= 1.4.2  && < 1.5
               , frontmatter          >= 0.1    && < 0.2
               , pandoc               >= 2.19   && < 2.20
               , pandoc-types         >= 1.22   && < 1.23
               , text                 >= 2.0    && < 2.1
               , yaml                 >= 0.11.8 && < 0.12
