cabal-version:      3.0
name:               achille-stache
version:            0.0.0
synopsis:           Bindings for processing Mustache templates in achille using stache
category:           Web
description:        Bindings for processing Mustache templates in achille using stache

bug-reports:        https://github.com/flupe/achille/issues
homepage:           https://acatalepsie.fr/projects/achille
author:             Lucas Escot <lucas@escot.me>
maintainer:         Lucas Escot <lucas@escot.me>
license:            MIT
license-file:       LICENSE
build-type:         Simple
tested-with:        GHC == 9.4.2

source-repository head
  type:             git
  location:         git://github.com/flupe/achille.git
  subdir:           achille-stache

library
  default-language:  Haskell2010
  hs-source-dirs:    .
  default-extensions: BlockArguments
                    , DeriveAnyClass
                    , DeriveGeneric
                    , ImportQualifiedPost
                    , InstanceSigs
                    , LambdaCase
                    , ScopedTypeVariables
                    , TupleSections
                    , TypeFamilies
                    , TypeOperators
  exposed-modules: Achille.Stache
  other-modules:   Achille.Stache.Recipe
  build-depends: base        >= 4.16    && < 4.18
               , achille     >= 0.1     && < 0.2
               , aeson       >= 2.1     && < 2.2
               , binary      >= 0.8.9   && < 0.9
               , containers  >= 0.6.5   && < 0.7
               , filepath    >= 1.4.2   && < 1.5
               , megaparsec  >= 7.0     && < 10.0
               , stache      >= 2.3.3   && < 2.4
               , text        >= 2.0     && < 2.1
