cabal-version:      3.0
name:               docs
version:            0.0.0
build-type:         Simple
tested-with:        GHC == 9.4.2
executable docs
  main-is: Main.hs
  default-language: GHC2021
  default-extensions: BlockArguments
                    , DeriveAnyClass
                    , DerivingStrategies
                    , DerivingVia
                    , DuplicateRecordFields
                    , ImportQualifiedPost
                    , OverloadedRecordDot
                    , OverloadedStrings
                    , QualifiedDo
                    , RecordWildCards
  build-depends: base
               , achille
               , achille-pandoc
               , achille-stache
               , aeson
               , binary
               , text
               , time
               , filepath
