cabal-version:      3.8
name:               docs
version:            0.0.0
build-type:         Simple
tested-with:        GHC == 9.4.4
executable docs
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021
  default-extensions: BlockArguments
                    , DeriveAnyClass
                    , DerivingStrategies
                    , DerivingVia
                    , DuplicateRecordFields
                    , ImportQualifiedPost
                    , NoImplicitPrelude
                    , OverloadedRecordDot
                    , OverloadedStrings
                    , QualifiedDo
                    , RecordWildCards
  build-depends: base
               , achille
               , achille-yaml
               , achille-pandoc
               , achille-stache
               , aeson
               , binary
               , filepath
               , stache
               , text
               , time
               , yaml
