cabal-version:      3.0
name:               example
version:            0.0.0
build-type:         Simple
tested-with:        GHC == 9.2.4
executable example
  ghc-options: -O2
  main-is:       Main.hs
  default-extensions: QualifiedDo
                    , BlockArguments
                    , OverloadedStrings
                    , DeriveGeneric
                    , DeriveAnyClass
                    , RecordWildCards
                    , ImportQualifiedPost
                    , TypeSynonymInstances
                    , FlexibleInstances
                    , MultiParamTypeClasses
                    , IncoherentInstances
  build-depends: base
               , achille
               , achille-pandoc
               , achille-stache
               , aeson
               , text
               , filepath

