cabal-version:      3.0
name:               example
version:            0.0.0
build-type:         Simple
tested-with:        GHC == 9.4.2
executable example
  ghc-options: -O2
  main-is:       Main.hs
  default-language: GHC2021
  default-extensions: QualifiedDo
                    , BlockArguments
                    , OverloadedStrings
                    , DeriveAnyClass
                    , RecordWildCards
                    , ImportQualifiedPost
  build-depends: base
               , achille
               , achille-pandoc
               , achille-stache
               , aeson
               , text
               , filepath
