cabal-version:      3.8
name:               example
version:            0.0.0
build-type:         Simple
tested-with:        GHC == 9.4.4
executable example
  ghc-options: -O2
  main-is:       Main.hs
  default-language: GHC2021
  default-extensions: BlockArguments
                    , DeriveAnyClass
                    , DerivingStrategies
                    , DerivingVia
                    , DuplicateRecordFields
                    , ImportQualifiedPost
                    , OverloadedRecordDot
                    , OverloadedStrings
                    , QualifiedDo
                    , RecordWildCards
  build-depends: base
               , achille
               , achille-pandoc
               , achille-stache
               , aeson
               , binary
               , text
               , time
               , filepath
